Fix: responsivity on mobile devices

--- a/src/app.css
+++ b/src/app.css
@@ -62,3 +62,14 @@ button:focus-visible {
 }
 
 /* Removendo a media query para usar variáveis CSS e o atributo data-mode */
+
+/* Hide scrollbar for Chrome, Safari and Opera */
+.no-scrollbar::-webkit-scrollbar {
+  display: none;
+}
+
+/* Hide scrollbar for IE, Edge and Firefox */
+.no-scrollbar {
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;  /* Firefox */
+}
